@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Kaipule IM20 Door/Window Sensor -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration -->
+	<CommandClass id="112">
+		<Value type="byte" genre="config" instance="1" index="1" label="Basic Set Level" size="1" min="1" max="255" value="255">
+			<Help>Basic Set parameter setting, the receivers make relevant adjustment according to parameter value</Help>
+		</Value>		
+		<Value type="byte" genre="config" instance="1" index="2" label="Turn Off Light Time" size="1" min="1" max="255" units="10seconds" value="1">
+			<Help>When the device triggered and sends out “BASIC SET” to the lightings, the light turns on and off as the set time. 
+			The minimum value is 1, means the light bright time is 1*10s (10seconds), and turn off after 10 seconds, if the value is t, means the bright time is t*10s, turn off after t*10 seconds.</Help>
+		</Value>		
+		<Value type="list" size="1" genre="config" instance="1" index="3" label="Sensor alarm function" value="0">
+			<Help>Disable the door sensor alarm function.</Help>
+			<Item label="Enabled" value="0" />
+			<Item label="Disabled" value="1" />
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="5" label="Auto report status time" value="6" min="0" max="24" units="hours" size="1">
+			<Help>0-24 hours (Default 6 hours)</Help>
+		</Value>
+	</CommandClass>
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="2">
+			<Group index="1" max_associations="1" label="Lifeline"/>
+			<Group index="2" max_associations="2" label="Control BASIC SET reports" />
+		</Associations>
+	</CommandClass>
+</Product>
